# mymelotts.cpp

./: CMakeLists.txt  README.md  project_struct.md  项目结构.md
doc/: QA.md  tts_procedure.md
include/: AudioFile.h  EngineWrapper.hpp  Lexicon.hpp  MeloTTSConfig.h  OnnxWrapper.hpp  acoustic_model.h  melotts.h  text_processor.h  vocoder.h
scripts/: export_onnx.py
src/: acoustic_model.cpp  example.cpp  example.cpp.cpp  main.cpp  melotts.cpp  test_onnx.cpp  text_processor.cpp  vocoder.cpp
